# FFT

./: README.md
Emulation/: FFT.py  FFT_testbench.py  address_generator.py  control_block.py  dual_port_ram.py  fft.py  fft_accelerator.py  fft_testbench.py  lut_with_twiddle_factors.py  main.py  pyproject.toml  rom.py  selector.py  utils.py
Emulation/fft_accelerator/: address_generator.py  control_block.py  dual_port_ram.py  fft.py  fft_accelerator.py  lut_with_twiddle_factors.py  one_depth_buffer.py  rom.py  scale.py  selector.py
Emulation/fixedpoint/: complex_fixedpoint.py  dumps.py  fixedpoint.py  validator.py
Emulation/tests/: test_complex_fixedpoint.py  test_fft.py  test_fixedpoint.py
design/core/: Makefile  fft.sv  top.sv
emulator/: pyproject.toml
emulator/fft_accelerator/: fft.py  one_depth_buffer.py
emulator/tests/: params.py  test_complex_fixedpoint.py  test_fft.py
