[project]
name = "emulation"
version = "0.1.0"
description = "Bit accurate model of FFT accelerator"
authors = [
    {name = "demagogen",email = "roman.korennoy@gmail.com"}
]
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
